--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,3 @@ html, body {
     font-family: Univers;
     overflow-x: hidden;
 }
-ul {
-    margin: 0;
-}
